# emg_steered_maze_game

./: README.md  maze.py  setup.cfg
src/: main.py
src/maze_game_hmi/game/: maze.py
src/maze_game_hmi/utils/: utils.py
src/methods/: read_data.py  reading_data_plot.py
src/utils/: utils.py
tests/: mvc.hdf5  testing.ipynb
