[metadata]
name = maze_game_hmi
version = 0.0.1
author = Mheit
author-email = michal.heit@student.put.poznan.pl
description = Game package
long_description  = file: README.md

classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.9
install_requires =
    numpy>=1.19.5
    pandas
    scipy
    matplotlib
    pygame
    ipykernel
    tables

package_dir = 
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
testing = pytest>=6.2.4
          pytest-cov